alignment and layout fixed

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -8,7 +8,7 @@
     border: 2px solid grey;
     border-radius: 10px;
     width: 450px;
-    max-height: 550px;
+    height: 550px;
     background-color: rgb(62, 64, 66);
     display: flex;
     flex-direction: column;
